--- a/BBS/package.json
+++ b/BBS/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "echarts": "^5.1.1",
     "element-ui": "^2.15.1",
     "moment": "^2.29.1",
     "vue": "^2.5.2",
